PLAN.md Phase 26 (staged): virtual threads at the storage door
The storage layer's complexity is 136 reactive chains, measured, not a Java
version. Inside the storage door — StorageVerticle and the Pg backends —
code would run on virtual threads as sequential Java, awaiting the same
Mutiny pool; the api stays CompletionStage, the bus stays asynchronous, the
parity kit is the gate unchanged. Vert.x 4.5.31 already has the threading
model. Prefers Java 25 for one non-cosmetic reason: JEP 491 removed pinning
on synchronized. Streaming ingest becomes a loop inside a transaction, which
is the strongest argument for doing this before TODO item 3.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>